packages/meettrace_whisper_native/lib/src/third_party/meettrace_whisper.g.dart

// Copyright (c) 2026 MeetTrace contributors.
// SPDX-License-Identifier: MIT
//
// Generated by package:ffigen. Do not edit manually.
// Source: src/meettrace_whisper.h
// Regenerate: dart run tool/ffigen.dart
//
// ignore_for_file: type=lint, unused_import, unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset(
  'package:meettrace_whisper_native/src/third_party/meettrace_whisper.g.dart',
)
library;

import 'dart:ffi' as ffi;
import 'package:meta/meta.dart' as meta;

@meta.RecordUse()
@ffi.Native<ffi.Void Function(ffi.Pointer<mt_whisper_context>)>()
external void mt_whisper_cancel(ffi.Pointer<mt_whisper_context> context);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<mt_whisper_context> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<mt_whisper_context> mt_whisper_create(
  ffi.Pointer<ffi.Char> model_path,
  int thread_count,
  ffi.Pointer<ffi.Char> language,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(ffi.Pointer<mt_whisper_context>)>()
external void mt_whisper_destroy(ffi.Pointer<mt_whisper_context> context);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<mt_whisper_context>)>()
external ffi.Pointer<ffi.Char> mt_whisper_last_error(
  ffi.Pointer<mt_whisper_context> context,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> mt_whisper_runtime_version();

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<mt_whisper_context>)>()
external int mt_whisper_segment_count(ffi.Pointer<mt_whisper_context> context);

@meta.RecordUse()
@ffi.Native<ffi.Int64 Function(ffi.Pointer<mt_whisper_context>, ffi.Int32)>()
external int mt_whisper_segment_end_ms(
  ffi.Pointer<mt_whisper_context> context,
  int segment_index,
);

@meta.RecordUse()
@ffi.Native<ffi.Int64 Function(ffi.Pointer<mt_whisper_context>, ffi.Int32)>()
external int mt_whisper_segment_start_ms(
  ffi.Pointer<mt_whisper_context> context,
  int segment_index,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<mt_whisper_context>, ffi.Int32)
>()
external ffi.Pointer<ffi.Char> mt_whisper_segment_text(
  ffi.Pointer<mt_whisper_context> context,
  int segment_index,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<mt_whisper_context>,
    ffi.Pointer<ffi.Float>,
    ffi.Int32,
  )
>()
external int mt_whisper_transcribe(
  ffi.Pointer<mt_whisper_context> context,
  ffi.Pointer<ffi.Float> samples,
  int sample_count,
);

final class mt_whisper_context extends ffi.Opaque {}
